--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Dimitri-Y.github.io/cinemania-group-11",
+  "homepage": "https://7Nata7.github.io/Cinemania",
   "scripts": {
     "start": "parcel src/*.html ",
-    "build": "parcel build src/*html --public-url /cinemania-group-11/ "
+    "build": "parcel build src/*html --public-url /Cinemania/ "
   },
   "repository": {
     "type": "git",
